src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__unary_operators.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: unary_operators\n──────────────────────────────────────────────────────────────────────────────────\n!0+(-0);"
expression: parse_expr (& source)
info: test_parser_expressions
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
        },
        file_id: FileId(Anon),
    } = BinaryNode {
        kind: Add,
        left: Unary(
            Not,
            Int(0)[1:2],
        )[1:2],
        right: Unary(
            Negative,
            Int(0)[5:6],
        )[5:6],
    }[1:6],
)
