src/frontend/ast/snapshots/shlang__frontend__ast__parser_test__variable assignment.snap
---
source: src/frontend/ast/parser_test.rs
description: "Test: variable assignment\n──────────────────────────────────────────────────────────────────────────────────\nb = 1;"
expression: parse_expr (& source)
info: test_parser_variables
---
Ok(
    Program {
        ident_pool: IdentArray {
            0: "input",
            1: "println",
            2: "str_len",
            3: "parse_str",
            4: "b",
        },
        file_id: FileId(Anon),
    } = Assign(Var(IdentId(4))[0:1] = Int(1)[4:5])[0:5],
)
